# panel_exp

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: ALGORITHM_REASSESSMENT.md  AUGSYNTH_ASCM_DEVELOPMENT_ROADMAP_001.md  AUGSYNTH_ASCM_IMPLEMENTATION_FIDELITY_AUDIT_001.md  AUGSYNTH_ASCM_INFERENCE_PAIRING_ADR_001.md  AUGSYNTH_ASCM_LANE_CLOSEOUT_001.md  AUGSYNTH_ASCM_STRENGTHENING_001.md  CALIBRATION_FAILURE_ANALYSIS_001.md  CALIBRATION_RUN_001.md  CALIBRATION_RUN_002.md  DEFERRED_WORK_REGISTRY.md  DESIGN_AUDIT_PROGRAM_001.md  DESIGN_CODE_INVENTORY_001.md  DESIGN_COMBINATION_VALIDATION_MATRIX_001.md  DESIGN_CONTRACT_ENFORCEMENT_PLAN_001.md  DESIGN_CONTRACT_GOLDEN_FIXTURES_001.md  DESIGN_CONTRACT_SCHEMA_001.md  DESIGN_CONTRACT_VALIDATION_TEST_PLAN_001.md  DESIGN_CONTRACT_VALIDATOR_IMPLEMENTATION_PLAN_001.md  DESIGN_ESTIMATOR_INFERENCE_SUITABILITY_FRAMEWORK_001.md  DESIGN_GUARDRAILS_001.md  DESIGN_GUARDRAIL_ENFORCEMENT_001.md  DESIGN_GUARDRAIL_RUNTIME_INTEGRATION_001.md  DESIGN_IMPLEMENTATION_VALIDATION_001.md  DESIGN_LITERATURE_ALIGNMENT_001.md  DESIGN_OUTPUT_CONTRACT_001.md  DESIGN_READOUT_AUGSYNTH_COMPATIBILITY_001.md  DESIGN_STATISTICAL_VALIDATION_PROTOCOL_001.md  DESIGN_SUITABILITY_FRAMEWORK_001.md  DESIGN_SUITABILITY_REASSESSMENT_001.md  DESIGN_TIER1_CONTRACT_EMISSION_IMPLEMENTATION_PLAN_001.md  DESIGN_TIER1_CONTRACT_EMISSION_PLAN_001.md  DOC_DRIFT_AUDIT.md  DOWNSTREAM_READOUT_AUTHORIZATION_GATEWAY_001.md  ESTIMATOR_READOUT_GUARDRAIL_INTEGRATION_001.md  EXPERIMENTATION_PLATFORM_VISION.md  (+100 more)
(+1414 files in other folders)
